Move build properties up in directory structure, to avoid duplication.

--- a/annotation-file-utilities/annotation-file-utilities.html
+++ b/annotation-file-utilities/annotation-file-utilities.html
@@ -204,6 +204,14 @@ Source code is provided in the distribution.  To compile it, run
 <code>ant zipfile</code>.
 </p>
 
+<p>
+The source code repository appears at
+<a href="http://code.google.com/p/annotation-tools/source">http://code.google.com/p/annotation-tools/source</a>.
+</p>
+
+</code>.
+</p>
+
 
 <hr />
 <h2 id="using">Using the Annotation File Utilities</h2>
