updated for release 3.6.4

--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -15,6 +15,20 @@ This is the changelog for the
 <ul>
 
   <li>
+    Version 3.6.4 (released May 1, 2014):
+    <ul>
+        <li>
+          Expands AST path support to cover every AST node within a class declaration.
+        </li>
+        <li>
+          Abbreviates enum tags for annotations if <code>--abbreviate</code> is selected.
+        </li>
+        <li>
+          Generates explicit default constructors when necessary for annotation insertion.
+        </li>
+    </ul>
+  </li>
+  <li>
     Version 3.6.3 (released Apr 2, 2014):
     <ul>
         <li>
