updated for release 3.6.5

--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -15,6 +15,17 @@ This is the changelog for the
 <ul>
 
   <li>
+    Version 3.6.5 (released June 2, 2014):
+    <ul>
+        <li>
+          Generates extends bounds when necessary for annotation insertion.
+        </li>
+        <li>
+          Fixes assorted bugs in the AST path-based insertion logic.
+        </li>
+    </ul>
+  </li>
+  <li>
     Version 3.6.4 (released May 1, 2014):
     <ul>
         <li>
