--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -15,6 +15,14 @@ This is the changelog for the
 <ul>
 
   <li>
+    Version 3.6.6 (released July 1, 2014):
+    <ul>
+        <li>
+          Fixes bug affecting inner array types of new[] expressions in the AST path-based insertion logic.
+        </li>
+    </ul>
+  </li>
+  <li>
     Version 3.6.5 (released June 2, 2014):
     <ul>
         <li>
