notes add'l bug fix

--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -20,6 +20,9 @@ This is the changelog for the
         <li>
           Fixes bug affecting inner array types of new[] expressions in the AST path-based insertion logic.
         </li>
+        <li>
+          Fixes JAIF generation bugs involving insert-annotation and insert typecast within methods and fields.
+        </li>
     </ul>
   </li>
   <li>
