Update reference to Java 8

--- a/annotation-file-utilities/annotation-file-utilities.html
+++ b/annotation-file-utilities/annotation-file-utilities.html
@@ -66,9 +66,7 @@ The document
 defines a textual format for annotations,
 and it also motivates reasons why such a file format is necessary in
 addition to the <code>.java</code> and <code>.class</code> formats.  The
-file format supports both the declaration annotations introduced in Java 5, and also the
-<a href="http://types.cs.washington.edu/jsr308/">type annotations</a> that
-will appear in Java 8.
+file format supports both the declaration annotations and type annotations.
 </p>
 
 <p>
