--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -15,6 +15,15 @@ This is the changelog for the
 <ul>
 
   <li>
+    Version 3.6.7 (released August 1, 2014):
+    <ul>
+        <li>
+          Improves Java 9 support.
+        </li>
+        <li>
+          Fills in some previously missing cases for AST path-based insertion specifications.
+        </li>
+    </ul>
     Version 3.6.6 (released July 1, 2014):
     <ul>
         <li>
