--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -15,6 +15,12 @@ This is the changelog for the
 <ul>
 
   <li>
+    Version 3.6.8 (released September 24, 2014):
+    <ul>
+        <li>
+          Fixes numerous bugs in AST path-based insertion logic.
+        </li>
+    </ul>
     Version 3.6.7 (released August 1, 2014):
     <ul>
         <li>
