--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -15,12 +15,22 @@ This is the changelog for the
 <ul>
 
   <li>
+    Version 3.6.9 (released October 30, 2014):
+    <ul>
+        <li>
+          Minor bug fixes and improvements.
+        </li>
+    </ul>
+  </li>
+  <li>
     Version 3.6.8 (released September 24, 2014):
     <ul>
         <li>
           Fixes numerous bugs in AST path-based insertion logic.
         </li>
     </ul>
+  </li>
+  <li>
     Version 3.6.7 (released August 1, 2014):
     <ul>
         <li>
@@ -30,6 +40,8 @@ This is the changelog for the
           Fills in some previously missing cases for AST path-based insertion specifications.
         </li>
     </ul>
+  </li>
+  <li>
     Version 3.6.6 (released July 1, 2014):
     <ul>
         <li>
