--- a/annotation-file-utilities/annotation-file-utilities.html
+++ b/annotation-file-utilities/annotation-file-utilities.html
@@ -227,7 +227,7 @@ For all the tools, arguments starting with a single
 command line.  (Initial <code>@@</code> represents a literal
 <code>@</code> in the argument text.)  For additional details of argfile
 processing, refer to Oracle's
-<a href="http://docs.oracle.com/javase/7/docs/technotes/tools/windows/javac.html"><code>javac</code></a>
+<a href="https://docs.oracle.com/javase/7/docs/technotes/tools/windows/javac.html"><code>javac</code></a>
 documentation.
 </p>
 
