updated for release 3.6.10

--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -15,6 +15,14 @@ This is the changelog for the
 <ul>
 
   <li>
+    Version 3.6.10 (released November 26, 2014):
+    <ul>
+        <li>
+          Fixes many bugs, mostly in AST path-based insertion logic.
+        </li>
+    </ul>
+  </li>
+  <li>
     Version 3.6.9 (released October 30, 2014):
     <ul>
         <li>
