--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -15,6 +15,14 @@ This is the changelog for the
 <ul>
 
   <li>
+    Version 3.6.11 (released December 17, 2014):
+    <ul>
+        <li>
+          Fixes more insertion logic bugs, including errors in handling generic arrays.
+        </li>
+    </ul>
+  </li>
+  <li>
     Version 3.6.10 (released November 26, 2014):
     <ul>
         <li>
