--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -15,6 +15,14 @@ This is the changelog for the
 <ul>
 
   <li>
+    Version 3.6.12 (released January 30, 2015):
+    <ul>
+        <li>
+          Adds support for lambda expressions, member references, and type arguments of static method calls and member references.
+        </li>
+    </ul>
+  </li>
+  <li>
     Version 3.6.11 (released December 19, 2014):
     <ul>
         <li>
