--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -15,10 +15,21 @@ This is the changelog for the
 <ul>
 
   <li>
+    Version 3.6.13 (released March 2, 2015):
+    <ul>
+        <li>
+          Extends support for lambda expressions, member references, and type arguments of static method calls and member references to <code>extract-annotations</code> and <code>insert-annotations</code>.
+        </li>
+        <li>
+          Slightly changes JAIF format for the new features.  (See file format documentation for details.)
+        </li>
+    </ul>
+  </li>
+  <li>
     Version 3.6.12 (released January 30, 2015):
     <ul>
         <li>
-          Adds support for lambda expressions, member references, and type arguments of static method calls and member references.
+          Adds support for lambda expressions, member references, and type arguments of static method calls and member references to <code>insert-annotations-to-source</code>.
         </li>
     </ul>
   </li>
