--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -15,6 +15,14 @@ This is the changelog for the
 <ul>
 
   <li>
+    Version 3.6.14 (released April 8, 2015):
+    <ul>
+        <li>
+          Fixes numerous minor bugs in <code>insert-annotations</code> and <code>insert-annotations-to-source</code>.
+        </li>
+    </ul>
+  </li>
+  <li>
     Version 3.6.13 (released March 2, 2015):
     <ul>
         <li>
