--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -15,6 +15,17 @@ This is the changelog for the
 <ul>
 
   <li>
+    Version 3.6.15 (released May 1, 2015):
+    <ul>
+        <li>
+          Allows annotations on constituents of an intersection type cast without the use of the AST path format.
+        </li>
+        <li>
+          Fixes assorted bugs in <code>insert-annotations</code>.
+        </li>
+    </ul>
+  </li>
+  <li>
     Version 3.6.14 (released April 17, 2015):
     <ul>
         <li>
