--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -15,6 +15,14 @@ This is the changelog for the
 <ul>
 
   <li>
+    Version 3.6.16 (released June 1, 2015):
+    <ul>
+        <li>
+          Fixes multiple crash-causing bugs in <code>insert-annotations-to-source</code>.
+        </li>
+    </ul>
+  </li>
+  <li>
     Version 3.6.15 (released May 1, 2015):
     <ul>
         <li>
