--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -15,6 +15,14 @@ This is the changelog for the
 <ul>
 
   <li>
+    Version 3.6.17 (released June 30, 2015):
+    <ul>
+        <li>
+          Minor bug fixes and improvements.
+        </li>
+    </ul>
+  </li>
+  <li>
     Version 3.6.16 (released June 1, 2015):
     <ul>
         <li>
