Update references from Google Code to GitHub and from Mercurial (Hg) to Git

--- a/annotation-file-utilities/annotation-file-utilities.html
+++ b/annotation-file-utilities/annotation-file-utilities.html
@@ -195,7 +195,7 @@ the distribution), so most users do not need to compile it themselves.
 There are two ways to obtain the source code.
 Source code is provided in the distribution.
 Alternately, see the source code repository at
-<a href="http://code.google.com/p/annotation-tools/">http://code.google.com/p/annotation-tools/</a>.
+<a href="https://github.com/typetools/annotation-tools">https://github.com/typetools/annotation-tools</a>.
 </p>
 
 <p>
@@ -329,7 +329,7 @@ In this case, you should add type arguments, such as changing
 
 <p>
 To submit a bug report or request a new feature, use the
-<a href="http://code.google.com/p/annotation-tools/issues/list">issue
+<a href="https://github.com/typetools/annotation-tools/issues">issue
   tracker</a>.  When reporting a bug, please include exact instructions in
 how to reproduce it, and please also attach relevant input files.  This
 will let us resolve the issue quickly.
@@ -339,7 +339,7 @@ will let us resolve the issue quickly.
 You can also reach the developers at 
 <a href="mailto:annotation-tools-dev@googlegroups.com">annotation-tools-dev@googlegroups.com</a>.
 But please use the
-  <a href="http://code.google.com/p/annotation-tools/issues/list">issue
+  <a href="https://github.com/typetools/annotation-tools/issues">issue
   tracker</a> for bug reports and feature requests.
 </p>
 
