--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -15,6 +15,18 @@ This is the changelog for the
 <ul>
 
   <li>
+    Version 3.6.18 (released July 1, 2015):
+    <ul>
+        <li>
+	  Moved the Annotation Tools version control repository from Google Code
+	  to GitHub, and from the Mercurial version control system to Git.
+          If you have cloned the version control repository, then discard your
+          old clone and create a new one using this command:
+	  <pre>  git clone https://github.com/typetools/annotation-tools.git</pre>
+        </li>
+    </ul>
+  </li>
+  <li>
     Version 3.6.17 (released July 1, 2015):
     <ul>
         <li>
@@ -459,7 +471,7 @@ This is the changelog for the
       </li>
       <li>
         Switch from utilMDE library to
-        <a href="http://code.google.com/p/plume-lib/">plume-lib</a>.
+        <a href="https://github.com/mernst/plume-lib">plume-lib</a>.
       </li>
     </ul>
   </li>
