Miscellaneous documentation improvements

--- a/scene-lib/overview.html
+++ b/scene-lib/overview.html
@@ -39,7 +39,7 @@ annotation's retention policy.
 <p>
 The example program <tt>annotations.tests.Example</tt> demonstrates the
 library's annotation-processing capabilities.  Its source code (and also
-example input and output) are distributed with the Scene Library.
+example input and output) are distributed with the Annotation Scene Library.
 </p>
 
 </body>
