--- a/annotation-file-utilities/annotation-file-utilities.html
+++ b/annotation-file-utilities/annotation-file-utilities.html
@@ -122,8 +122,8 @@ The following instructions assume either a Linux or Windows system using a comma
 </p>
 
 <p>
-The current distribution is <code>Annotation File Utilities version
-<!-- afu-version -->3.6.17, 01 Jul 2015<!-- /afu-version -->.</code>
+The current release is Annotation File Utilities version
+<!-- afu-version -->3.6.17, 01 Jul 2015<!-- /afu-version -->.
 </p>
 
 <ol>
@@ -140,7 +140,7 @@ The current distribution is <code>Annotation File Utilities version
 
   <pre><code>unzip annotation-tools.zip</code></pre>
 
-  The <code>annotation-tools</code> directory must be in the parent directory (for example, in <code>~/jsr308/</code>) of the <code>jsr308-langtools</code>
+  The <code>annotation-tools</code> directory must be a sibling of the <code>jsr308-langtools</code>
   directory (available at <a href="http://types.cs.washington.edu/jsr308/">http://types.cs.washington.edu/jsr308/</a>).
   Alternatively, Unix (including Linux and MacOS) users may set the <code>LANGTOOLS</code> environment variable to
   the location of the <code>jsr308-langtools</code> directory:
@@ -352,10 +352,6 @@ The <a href="changelog.html">changelog</a> describes what is new in each release
 
 
 <hr/>
-
-<p>
-Last revised: <!-- afu-date -->March 9, 2013<!-- /afu-date-->
-</p>
 
 </body>
 </html>
