Update changelog for annotation-file-utilities

--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -24,6 +24,7 @@ This is the changelog for the
           old clone and create a new one using this command:
 	  <pre>  git clone https://github.com/typetools/annotation-tools.git</pre>
         </li>
+        <li>Fixes some errors involving default class and method bound insertion.</li>
     </ul>
   </li>
   <li>
