Document command-line options in manual and Javadoc

--- a/annotation-file-utilities/annotation-file-utilities.html
+++ b/annotation-file-utilities/annotation-file-utilities.html
@@ -27,8 +27,8 @@
         </ul></li>
       <li><a href="#implementation">Design and Implementation Details</a>
         <ul>
-          <li><a href="#asmx">Asmx</a>
-          <li><a href="#scene-lib">Scene-lib</a></li>
+          <li><a href="#asmx">Asmx</a></li>
+          <li><a href="#scene-lib">Scene-lib</a>
             <ul>
               <li><a href="#bytecode-insertion">Bytecode Insertion</a></li>
               <li><a href="#bytecode-extraction">Bytecode Extraction</a></li>
@@ -306,10 +306,7 @@ use the insert-annotations-to-source tool.  Running:
 will read all the annotations from <code>indexFile.jaif</code>, insert them
 into their appropriate locations in <code>mypackage/MyClass.java</code>,
 and write the results to <code>annotated/mypackage/MyClass.java</code>.
-For full usage information, run:
 </p>
-
-<pre><code>insert-annotations-to-source --help</code></pre>
 
 <p>
 If you wish to insert annotations into method bodies, you must have the
@@ -334,6 +331,49 @@ In this case, you should add type arguments, such as changing
 <pre>  public void pushNonezeroRing(Stack stack, Hashtable seen) {</pre>
 <p>to</p>
 <pre>  public void pushNonezeroRing(Stack&lt;Edge&gt; stack, Hashtable&lt;Edge, ?&gt; seen) {</pre>
+
+<p>
+The command-line options are as follows:
+</p>
+
+<!-- start options doc (DO NOT EDIT BY HAND) -->
+<ul>
+  <li id="optiongroup:General-options">General options
+    <ul>
+      <li id="option:outdir"><b>-d</b> <b>--outdir=</b><i>directory</i>. Directory in which output files are written. [default annotated/]</li>
+      <li id="option:in-place"><b>-i</b> <b>--in-place=</b><i>boolean</i>. If true, overwrite original source files (making a backup first).
+ Furthermore, if the backup files already exist, they are used instead
+ of the .java files.  This behavior permits a user to tweak the .jaif
+ file and re-run the annotator.
+ <p>
+
+ Note that if the user runs the annotator with --in-place, makes edits,
+ and then re-runs the annotator with this --in-place option, those
+ edits are lost.  Similarly, if the user runs the annotator twice in a
+ row with --in-place, only the last set of annotations will appear in
+ the codebase at the end.
+ <p>
+
+ To preserve changes when using the --in-place option, first remove the
+ backup files.  Or, use the <tt>-d .</tt> option, which makes (and
+ reads) no backup, instead of --in-place. [default false]</li>
+      <li id="option:abbreviate"><b>-a</b> <b>--abbreviate=</b><i>boolean</i>. Abbreviate annotation names [default true]</li>
+      <li id="option:comments"><b>-c</b> <b>--comments=</b><i>boolean</i>. Insert annotations in comments [default false]</li>
+      <li id="option:omit-annotation"><b>-o</b> <b>--omit-annotation=</b><i>string</i>. Omit given annotation</li>
+      <li id="option:nowarn"><b>--nowarn=</b><i>boolean</i>. Suppress warnings about disallowed insertions [default false]</li>
+      <li id="option:convert-jaifs"><b>--convert-jaifs=</b><i>boolean</i>. Convert JAIFs to new format [default false]</li>
+      <li id="option:help"><b>-h</b> <b>--help=</b><i>boolean</i>. Print usage information and exit [default false]</li>
+    </ul>
+  </li>
+  <li id="optiongroup:Debugging-options">Debugging options
+    <ul>
+      <li id="option:verbose"><b>-v</b> <b>--verbose=</b><i>boolean</i>. Verbose (print progress information) [default false]</li>
+      <li id="option:debug"><b>--debug=</b><i>boolean</i>. Debug (print debug information) [default false]</li>
+      <li id="option:print-error-stack"><b>--print-error-stack=</b><i>boolean</i>. Print error stack [default false]</li>
+    </ul>
+  </li>
+</ul>
+<!-- end options doc -->
 
 
 <hr />
