--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -15,6 +15,17 @@ This is the changelog for the
 <ul>
 
   <li>
+    Version 3.6.19 (released Sep 1, 2015):
+    <ul>
+        <li>Avoids importing the same annotation name from multiple packages (Issue
+        <a href="https://github.com/typetools/annotation-tools/issues/101">#101</a>).</li>
+        <li>Fixes some bugs (including Issues
+        <a href="https://github.com/typetools/annotation-tools/issues/100">#100</a> and
+        <a href="https://github.com/typetools/annotation-tools/issues/102">#102</a>)
+        pertaining to <pre>extends</pre> clause generation.</li>
+    </ul>
+  </li>
+  <li>
     Version 3.6.18 (released Aug 4, 2015):
     <ul>
         <li>
