Updated for release 3.6.20.

--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -14,6 +14,12 @@ This is the changelog for the
 
 <ul>
 
+    Version 3.6.20 (released Oct 8, 2015):
+  <li>
+    <ul>
+        <li>Minor bug fixes and improvements.</li>
+    </ul>
+  </li>
   <li>
     Version 3.6.19 (released Sep 1, 2015):
     <ul>
