Update changelog for release

--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -13,9 +13,14 @@ This is the changelog for the
 </p>
 
 <ul>
-
-    Version 3.6.20 (released Oct 8, 2015):
   <li>
+    Version 3.6.21 (released Oct 24, 2015):
+    <ul>
+        <li>Minor bug fixes and improvements.</li>
+    </ul>
+  </li>
+  <li>
+    Version 3.6.20 (released Oct 8, 2015):
     <ul>
         <li>Minor bug fixes and improvements.</li>
     </ul>
