Updated for release 3.6.22.

--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -14,6 +14,12 @@ This is the changelog for the
 
 <ul>
   <li>
+    Version 3.6.22 (released Nov 9, 2015):
+    <ul>
+        <li>Minor bug fixes and improvements.</li>
+    </ul>
+  </li>
+  <li>
     Version 3.6.21 (released Oct 24, 2015):
     <ul>
         <li>Minor bug fixes and improvements.</li>
