--- a/annotation-file-utilities/annotation-file-utilities.html
+++ b/annotation-file-utilities/annotation-file-utilities.html
@@ -259,7 +259,15 @@ will read in all the annotations from the annotation file
 <code>mypackage.MyClass</code>, outputting the final class file to
 <code>mypackage.MyClass.class</code> in the present working directory.
 Note that the class file for <code>mypackage.MyClass</code> must be located
-on your classpath.  Run:
+on your classpath.
+</p>
+
+<p>
+Multiple pairs of class and index files (in that order) can be specified
+on a single command line; if the program exits normally, the results
+are the same as if the program were run once for each pair of arguments
+in sequence.
+Run:
 </p>
 
 <pre><code>insert-annotations --help</code></pre>
@@ -283,6 +291,12 @@ will locate the class file for <code>mypackage.MyClass</code>, read all
 annotations from it, and write the results in annotation file format to
 <code>mypackage.MyClass.jaif</code> in the present working directory.  Note
 that <code>mypackage.MyClass</code> must be located on your classpath.
+</p>
+
+<p>
+Multiple classes can be specified on a single command line; if the
+program exits normally, the results are the same as if the program were
+run once for each class in sequence.
 Run:
 </p>
 
@@ -300,12 +314,30 @@ To insert annotations specified by an annotation file into a Java source file,
 use the insert-annotations-to-source tool.  Running:
 </p>
 
-<pre><code>insert-annotations-to-source indexFile.jaif mypackage/MyClass.java</code></pre>
+<pre><code>insert-annotations-to-source index1.jaif index2.jaif mypackage/MyClass.java yourpackage/YourClass.java</code></pre>
 
 <p>
-will read all the annotations from <code>indexFile.jaif</code>, insert them
-into their appropriate locations in <code>mypackage/MyClass.java</code>,
-and write the results to <code>annotated/mypackage/MyClass.java</code>.
+will read all the annotations from <code>index1.jaif</code> and
+<code>index2.jaif</code>, insert them (when applicable) into their
+appropriate locations in <code>mypackage/MyClass.java</code> and
+<code>yourpackage/YourClass.java</code>, and write the results to
+<code>annotated/mypackage/MyClass.java</code> and
+<code>annotated/mypackage/MyClass.java</code>, respectively.
+</p>
+
+<p>
+Index and source files can be specified in any order, mixing the two
+file types freely; if the source files have no overlapping definitions
+and the program exits normally, the results are the same as if the
+program were run once for each source file, with <em>all</em> JAIFs
+given for each run.
+Run:
+</p>
+
+<pre><code>insert-annotations-to-source --help</code></pre>
+
+<p>
+for full usage information.
 </p>
 
 <p>
