Update changelog for release

--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -14,6 +14,13 @@ This is the changelog for the
 
 <ul>
   <li>
+    Version 3.6.23 (released Dec 1, 2015):
+    <ul>
+        <li>Fixes Issue
+        <a href="https://github.com/typetools/annotation-tools/issues/106">#106</a>.</li>
+    </ul>
+  </li>
+  <li>
     Version 3.6.22 (released Nov 9, 2015):
     <ul>
         <li>Minor bug fixes and improvements.</li>
