Improve changelog formatting

--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -46,7 +46,7 @@ This is the changelog for the
         <li>Fixes some bugs (including Issues
         <a href="https://github.com/typetools/annotation-tools/issues/100">#100</a> and
         <a href="https://github.com/typetools/annotation-tools/issues/102">#102</a>)
-        pertaining to <pre>extends</pre> clause generation.</li>
+        pertaining to <code>extends</code> clause generation.</li>
     </ul>
   </li>
   <li>
