--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -14,6 +14,13 @@ This is the changelog for the
 
 <ul>
   <li>
+    Version 3.6.24 (released Dec 31, 2015):
+    <ul>
+        <li>Fixes offset calculation for wide JVM instructions.</li>
+        <li>Makes minor improvements to build process.</li>
+    </ul>
+  </li>
+  <li>
     Version 3.6.23 (released Dec 1, 2015):
     <ul>
         <li>Fixes Issue
