--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -16,6 +16,9 @@ This is the changelog for the
   <li>
     Version 3.6.24 (released Dec 31, 2015):
     <ul>
+        <li>Fixes Issue
+          <a href="https://github.com/typetools/annotation-tools/issues/108">#108</a>
+          by adding a <tt>LICENSE.txt</tt> file.</li>
         <li>Fixes offset calculation for wide JVM instructions.</li>
         <li>Makes minor improvements to build process.</li>
     </ul>
