--- a/annotation-file-utilities/annotation-file-utilities.html
+++ b/annotation-file-utilities/annotation-file-utilities.html
@@ -365,7 +365,7 @@ In this case, you should add type arguments, such as changing
 <p>to</p>
 <pre>  public void pushNonezeroRing(Stack&lt;Edge&gt; stack, Hashtable&lt;Edge, ?&gt; seen) {</pre>
 <p>
-In a few cases, insert-annotations-to-source will generate ``default''
+In a few cases, insert-annotations-to-source will generate "default"
 code to provide a location for an annotation.  These include
 <ul>
 <li>method and constructor <a href="http://docs.oracle.com/javase/specs/jls/se8/html/jls-8.html#jls-8.4.1-220">receivers;</a></li>
