--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -14,6 +14,16 @@ This is the changelog for the
 
 <ul>
   <li>
+    Version 3.6.25 (released Feb 1, 2016):
+    <ul>
+        <li>Uses system javac to compile the executable program, thus enabling Java 7 execution.</li>
+        <li>Clears set of required imports after processing each source file, fixing Issue
+          <a href="https://github.com/typetools/annotation-tools/issues/111">#111</a>.</li>
+        <li>Escapes String fields of annotations, fixing Issue
+          <a href="https://github.com/typetools/annotation-tools/issues/112">#112</a>.</li>
+    </ul>
+  </li>
+  <li>
     Version 3.6.24 (released Jan 4, 2016):
     <ul>
         <li>Fixes Issue
