Update link to AFU zip file and AFU zip version for release script processing

--- a/annotation-file-utilities/annotation-file-utilities.html
+++ b/annotation-file-utilities/annotation-file-utilities.html
@@ -141,7 +141,7 @@ The current release is Annotation File Utilities version
 <ol>
 <li>
   Download
-  <a href="annotation-tools-3.6.24.zip">annotation-tools-3.6.24.zip</a>.
+  <a href="current/annotation-tools-3.6.25.zip">annotation-tools-3.6.25.zip</a>.
 </li>
 
 <li>
@@ -150,7 +150,7 @@ The current release is Annotation File Utilities version
   unpacking the distribution zipfile (a standard place to do this is in a
   directory <code>~/jsr308/</code>):
 
-  <pre><code>unzip annotation-tools-3.6.24.zip</code></pre>
+  <pre><code>unzip annotation-tools-3.6.25.zip</code></pre>
 
   The <code>annotation-tools</code> directory must be a sibling of the <code>jsr308-langtools</code>
   directory (available at <a href="http://types.cs.washington.edu/jsr308/">http://types.cs.washington.edu/jsr308/</a>).
