--- a/annotation-file-utilities/annotation-file-utilities.html
+++ b/annotation-file-utilities/annotation-file-utilities.html
@@ -141,7 +141,7 @@ The current release is Annotation File Utilities version
 <ol>
 <li>
   Download
-  <a href="current/annotation-tools-3.6.25.zip">annotation-tools-3.6.25.zip</a>.
+  <a href="current/annotation-tools-3.6.25.zip"><!-- annotation-tools-zip-version -->annotation-tools-3.6.25.zip<!-- /annotation-tools-zip-version --></a>.
 </li>
 
 <li>
