Add changelog entry for version 3.6.26

--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -14,6 +14,13 @@ This is the changelog for the
 
 <ul>
   <li>
+    Version 3.6.26 (released Mar 1, 2016):
+    <ul>
+        <li>Avoids reinserting an annotation that already exists in comments, fixing Issue
+          <a href="https://github.com/typetools/annotation-tools/issues/114">#114</a>.</li>
+    </ul>
+  </li>
+  <li>
     Version 3.6.25 (released Feb 1, 2016):
     <ul>
         <li>Uses system javac to compile the executable program, thus enabling Java 7 execution.</li>
